# AoC2024

./: .clangd  .gitignore  CMakeLists.txt  array2d.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day25.cpp  point.cpp  shortest_path.cpp  vector.cpp
include/: array2d.h  point.h  shortest_path.h  vector.h
