cmake_minimum_required(VERSION 3.30.0)
project(advent_of_code_2024 VERSION 0.1.0 LANGUAGES C CXX)

set (CMAKE_CXX_STANDARD 20)
set (CMAKE_CXX_STANDARD_REQUIRED 20)

add_executable(day01 day01.cpp)
add_executable(day02 day02.cpp)
add_executable(day03 day03.cpp)
add_executable(day04 day04.cpp)
add_executable(day05 day05.cpp)

add_executable(day11 day11.cpp)
add_executable(day12 day12.cpp)